tests/baselines/reference/genericCallWithObjectTypeArgsAndConstraints5.errors.txt
==== tests/cases/compiler/genericCallWithObjectTypeArgsAndConstraints5.ts (8 errors) ====
    // Generic call with constraints infering type parameter from object member properties
    
    class C {
        x: string;
    }
    
    class D {
        x: string;
        y: string;
    }
    
    function foo<T, U extends T>(t: T, t2: U) {
                    ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        return (x: T) => t2;
    }
    
    var c: C;
    var d: D;
    var r2 = foo(d, c); // the constraints are self-referencing, no downstream error
             ~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Type 'C' is missing property 'y' from type 'D'.
             ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    var r9 = foo(() => 1, () => { }); // the constraints are self-referencing, no downstream error
             ~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Call signatures of types '() => void' and '() => number' are incompatible.
             ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    
    function other<T, U extends T>() {
                      ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        var r5 = foo<T, U>(c, d); // error
                 ~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'T' to argument 1 which is of type 'C'.
                 ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    }
    